@@ -60,6 +60,7 @@ class PaintStyleEditor : public QDialog, public Ui::PaintStyleEditor
 		void on_btDown_clicked();
 		void on_buttonBox_clicked(QAbstractButton * button);
 		void on_LabelHalo_clicked(bool b);
+		void on_LabelArea_clicked(bool b);
 
 	public:
 		std::vector<FeaturePainter> thePainters;
